k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: civictrack-backend-svc
  namespace: civictrack

spec:
  type: ClusterIP

  selector:
    app: civictrack-backend

  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
