k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: civictrack-ingress
  namespace: civictrack

  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: <ACM_CERT_ARN>

spec:
  rules:
    - host: civictrack.mahipal.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: civictrack-backend-svc
                port:
                  number: 3000
